--- a/admin-console/src/main/resources/application.properties
+++ b/admin-console/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 # 1，1 是管理员密码，相当于启动后就登录，方便测试，系统需要取消这俩个配置
-user.id=1
-user.orgId=1
+#user.id=1
+#user.orgId=1
 #打开审计功能，开发模式应该关闭
 audit.enable=false
 spring.session.store-type=HASH_MAP 
