--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,12 @@
 	<modules>
 		<module>admin-core</module>
 		<module>admin-console</module>
+		<module>admin-cloud</module>
 	</modules>
 	<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.1.RELEASE</version>
+        <version>2.0.0.RELEASE</version>
     </parent>
 	<!-- Add typical dependencies for a web application -->
 	<dependencies>
