--- a/admin-console/src/main/resources/application.properties
+++ b/admin-console/src/main/resources/application.properties
@@ -32,3 +32,10 @@ logging.pattern.console=%-4relative [%thread] %-5level %logger{256} %M %L - %msg
 spring.devtools.restart.exclude=templates/**
 #文档预览服务的调用地址，参考https://gitee.com/kekingcn/file-online-preview 安装，没有如下配置无法使用预览功能
 file.previewURL=http://localhost:8012/onlinePreview
+
+
+spring.application.name=console-service
+#eureka-client
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+
