--- a/admin-cloud/admin-cloud-eureka-server/src/main/resources/application.properties
+++ b/admin-cloud/admin-cloud-eureka-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8761
 spring.application.name=eureka-service
 
 #eureka-server
-eureka.instance.hostname=loclhost
+eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
