添加开启eureka服务配置

--- a/admin-console/src/main/resources/application.properties
+++ b/admin-console/src/main/resources/application.properties
@@ -34,8 +34,10 @@ spring.devtools.restart.exclude=templates/**
 file.previewURL=http://localhost:8012/onlinePreview
 
 
-spring.application.name=console-service
 #eureka-client
+#是否开启eureka服务
+eureka.client.enabled=false
+spring.application.name=console-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 
