--- a/admin-cloud/admin-cloud-eureka-server/pom.xml
+++ b/admin-cloud/admin-cloud-eureka-server/pom.xml
@@ -3,7 +3,8 @@
   <parent>
     <groupId>com.ibeetl</groupId>
     <artifactId>admin-cloud</artifactId>
-    <version>1.1.2</version>
+    <version>1.1.3</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>admin-cloud-eureka-server</artifactId>
   <name>admin-cloud-eureka-server</name>
