--- a/admin-cloud/pom.xml
+++ b/admin-cloud/pom.xml
@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>com.ibeetl</groupId>
 		<artifactId>admin</artifactId>
-		<version>1.1.2</version>
+		<version>1.1.3</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>admin-cloud</artifactId>
 	<packaging>pom</packaging>
