--- a/admin-console/pom.xml
+++ b/admin-console/pom.xml
@@ -6,7 +6,8 @@
 	<parent>
 		<groupId>com.ibeetl</groupId>
 		<artifactId>admin-cloud</artifactId>
-		<version>1.1.2</version>
+		<version>1.1.3</version>
+		<relativePath>../admin-cloud/pom.xml</relativePath>
 	</parent>
 	<dependencies>
 		<dependency>
