--- a/admin-core/pom.xml
+++ b/admin-core/pom.xml
@@ -96,7 +96,8 @@
     <parent>
         <groupId>com.ibeetl</groupId>
         <artifactId>admin</artifactId>
-        <version>1.1.2</version>
+        <version>1.1.3</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
   
