--- a/admin-workflow/pom.xml
+++ b/admin-workflow/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.ibeetl</groupId>
 	<artifactId>admin-workflow</artifactId>
-	<version>1.1.1</version>
+	<version>1.1.3</version>
 	<packaging>jar</packaging>
 
 	<name>workflow</name>
@@ -19,8 +19,9 @@
 	<parent>
 		<groupId>com.ibeetl</groupId>
 		<artifactId>admin-cloud</artifactId>
-		<version>1.1.2</version>
-		</parent>
+		<version>1.1.3</version>
+		<relativePath>../admin-cloud/pom.xml</relativePath>
+	</parent>
 	<dependencies>
 		<dependency>
 		    <groupId>org.flowable</groupId>
