--- a/admin-workflow/src/main/resources/application.properties
+++ b/admin-workflow/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 server.port=9000
-
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/flowable?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=123456
-spring.datasource.url=jdbc:oracle:thin:@172.16.86.56:1521:dfzb
-spring.datasource.username=flowable
-spring.datasource.password=flowable
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:mysql://localhost/springpuls
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
