1. Group 2. 服务模板 3. 统一异常处理 4. 更新 sql 5. 用户模块前台接口

--- a/admin-panel/pom.xml
+++ b/admin-panel/pom.xml
@@ -19,6 +19,10 @@
 			<artifactId>admin-core</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
