--- a/admin-panel/src/main/resources/application.properties
+++ b/admin-panel/src/main/resources/application.properties
@@ -16,8 +16,12 @@ user.orgId=1
 #打开审计功能，开发模式应该关闭
 audit.enable=false
 spring.session.store-type=HASH_MAP 
-#spring.cache.type=
-spring.cache.type=SIMPLE
+
+
+# 在调试环境选择禁用缓存
+spring.cache.type=none
+#spring.cache.type=SIMPLE
+
 logging.level.root=info
 logging.level.org.springframework.web.servlet.mvc.method.annotation=warn
 #logging.file = my.log
