--- a/admin-panel/src/main/resources/application.properties
+++ b/admin-panel/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://219.245.18.94:3306/pandora?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pandora?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=lamp2018cetc
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
