--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.12</version>
+            <!--<version>8.0.12</version>-->
+            <version>5.1.44</version>
         </dependency>
     </dependencies>
 
