--- a/admin-panel/src/main/resources/application.properties
+++ b/admin-panel/src/main/resources/application.properties
@@ -7,13 +7,14 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 #spring.datasource.username=starter2
 #spring.datasource.password=starter2
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.driver-class-username=oracle.jdbc.OracleDriver
 
 
 
 # 1，1 是管理员密码，相当于启动后就登录，方便测试，系统需要取消这俩个配置
 user.id=1
 user.orgId=1
+
 #打开审计功能，开发模式应该关闭
 audit.enable=false
 spring.session.store-type=HASH_MAP 
@@ -32,7 +33,7 @@ beetl.suffix=html
 beetlsql.dbStyle=org.beetl.sql.core.db.MySqlStyle
 #beetlsql.basePackage=com.ibeetl,com.xxx.yourpackage
 beetlsql.basePackage=com
-app.name=SpringBoot-Plus
+app.username=SpringBoot-Plus
 logging.pattern.console=%-4relative [%thread] %-5level %logger{256} %M %L - %msg%n
 spring.devtools.restart.exclude=templates/**
 #文档预览服务的调用地址，参考https://gitee.com/kekingcn/file-online-preview 安装，没有如下配置无法使用预览功能
@@ -41,7 +42,11 @@ file.previewURL=http://localhost:8012/onlinePreview
 
 #eureka-client
 eureka.client.enabled=false
-spring.application.name=console-service
+spring.application.username=console-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# 自定义配合
+custom.salt="|hRI;mMN$-[/TFaWD)L*]6H@p&^8KS#YPJ>UCBV!"
+
 
 
